fix apply applications openyurt

--- a/install-scripts/openyurt/apply_applications.yml
+++ b/install-scripts/openyurt/apply_applications.yml
@@ -18,12 +18,12 @@
         repo: 'https://github.com/eco-bench/eco-bench.git'
         dest: /etc/eco-bench
     - name: apply all pods
-      become: yes
+      become: no
       shell: kubectl apply -f . --recursive
       args:
         chdir: /etc/eco-bench/dummy/kubernetes
     - name: Wait for default pods become ready
-      become: yes
+      become: no
       shell: "kubectl wait --namespace=default --for=condition=Ready pods --timeout=600s --all"
       register: control_plane_pods_ready
       until: control_plane_pods_ready.rc == 0
@@ -31,7 +31,7 @@
       delay: 10
       ignore_errors: true
     - name: get all pods
-      become: yes
+      become: no
       shell: kubectl get pods -o wide
       register: output
     - name: Print output
