update benchmarking script

--- a/benchmarking/host.ini
+++ b/benchmarking/host.ini
@@ -1,9 +1,42 @@
 [all:vars]
 ansible_connection=ssh
-ansible_user=daniel
+ansible_user=lucas
+ansible_ssh_private_key_file=~/.ssh/id_rsa
 
-[server]
-server1 ansible_host=35.226.111.11
+[cloud]
+k3s-master ansible_host=34.146.141.246
+microk8s-master ansible_host=34.84.99.17
+mongodb ansible_host=34.146.219.194
+openyurt-master ansible_host=34.146.73.21
 
-[mongodb]
-server2 ansible_host=34.68.11.23
+[edge]
+k3s-worker-0 ansible_host=34.142.20.127
+k3s-worker-1 ansible_host=34.142.45.109
+microk8s-worker-0 ansible_host=104.199.74.46
+microk8s-worker-1 ansible_host=34.140.10.15
+openyurt-worker-0 ansible_host=34.78.66.238
+openyurt-worker-1 ansible_host=34.79.199.139
+
+[microk8s]
+microk8s-master ansible_host=34.84.99.17
+microk8s-worker-0 ansible_host=104.199.74.46
+microk8s-worker-1 ansible_host=34.140.10.15
+
+[k3s]
+k3s-master ansible_host=34.146.141.246
+k3s-worker-0 ansible_host=34.142.20.127
+k3s-worker-1 ansible_host=34.142.45.109
+
+[openyurt]
+openyurt-master ansible_host=34.146.73.21
+openyurt-worker-0 ansible_host=34.78.66.238
+openyurt-worker-1 ansible_host=34.79.199.139
+
+[mongo]
+mongodb ansible_host=34.146.219.194
+
+[cloud:vars]
+kubernetes_role=master
+
+[edge:vars]
+kubernetes_role=edge
