--- a/install-scripts/openyurt/hosts.ini
+++ b/install-scripts/openyurt/hosts.ini
@@ -1,17 +1,39 @@
 [all:vars]
 ansible_connection=ssh
-ansible_user=root
+ansible_user=lucas
 ansible_ssh_private_key_file=~/.ssh/id_rsa
 
 [cloud]
-openyurt-master ansible_host=65.21.185.77
+k3s-master ansible_host=34.146.208.60
+microk8s-master ansible_host=34.146.219.194
+mongodb ansible_host=34.146.56.210
+openyurt-master ansible_host=34.146.141.246
 
 [edge]
-openyurt-worker-0 ansible_host=65.21.188.5
+k3s-worker-0 ansible_host=34.142.20.127
+k3s-worker-1 ansible_host=34.142.45.109
+microk8s-worker-0 ansible_host=34.140.10.15
+microk8s-worker-1 ansible_host=34.78.66.238
+openyurt-worker-0 ansible_host=104.199.74.46
+openyurt-worker-1 ansible_host=34.79.199.139
+
+[microk8s]
+microk8s-master ansible_host=34.146.219.194
+microk8s-worker-0 ansible_host=34.140.10.15
+microk8s-worker-1 ansible_host=34.78.66.238
+
+[k3s]
+k3s-master ansible_host=34.146.208.60
+k3s-worker-0 ansible_host=34.142.20.127
+k3s-worker-1 ansible_host=34.142.45.109
 
 [openyurt]
-openyurt-master ansible_host=65.21.185.77
-openyurt-worker-0 ansible_host=65.21.188.5
+openyurt-master ansible_host=34.146.141.246
+openyurt-worker-0 ansible_host=104.199.74.46
+openyurt-worker-1 ansible_host=34.79.199.139
+
+[mongo]
+mongodb ansible_host=34.146.56.210
 
 [cloud:vars]
 kubernetes_role=master
