--- a/benchmarking/script.yml
+++ b/benchmarking/script.yml
@@ -7,9 +7,11 @@
     debug: 
       msg: "hostname: {{ shell_output.stdout_lines }} ip: {{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}"
 
+
 - hosts: all:!mongodb
   vars: 
     process: collector.sh
+    collector_time_interval: 120
   tasks:
   - name: Install iotop
     become: yes
@@ -39,25 +41,32 @@
       mode: 600
     loop:
       - collector.sh
-  - name: Get running processes
-    shell: "ps -ef | grep -v grep | grep -w {{ process }} | awk '{print $2}'"
-    register: running_processes
-  - name: Kill running processes
-    become: yes
-    shell: "kill {{ item }}"
-    ignore_errors: True
-    with_items: "{{ running_processes.stdout_lines }}"
-  - become: yes
-    wait_for:
-      path: "/proc/{{ item }}/status"
-      state: absent
-    with_items: "{{ running_processes.stdout_lines }}"
-    ignore_errors: yes
-    register: killed_processes
-  - name: Force kill stuck processes
-    become: yes
-    shell: "kill -9 {{ item }}"
-    with_items: "{{ killed_processes.results | select('failed') | map(attribute='item') | list }}"
+  # - name: Get running processes
+  #   shell: "ps -ef | grep -v grep | grep -w {{ process }} | awk '{print $2}'"
+  #   register: running_processes
+  # - name: Kill running processes
+  #   become: yes
+  #   shell: "kill {{ item }}"
+  #   ignore_errors: True
+  #   with_items: "{{ running_processes.stdout_lines }}"
+  # - become: yes
+  #   wait_for:
+  #     path: "/proc/{{ item }}/status"
+  #     state: absent
+  #   with_items: "{{ running_processes.stdout_lines }}"
+  #   ignore_errors: yes
+  #   register: killed_processes
+  # - name: Force kill stuck processes
+  #   become: yes
+  #   shell: "kill -9 {{ item }}"
+  #   with_items: "{{ killed_processes.results | select('failed') | map(attribute='item') | list }}"
+
+- hosts: all:!mongodb
+  gather_facts: no
+  vars: 
+    process: collector.sh
+    collector_time_interval: 60
+  tasks:
   - name: Execute collector.sh script
     become: yes
     async: 60 # Maximum allowed time in Seconds
@@ -66,10 +75,11 @@
     register: output_collector_script 
     # TODO Remove Max Time Parameter from collector.sh
     shell: 
-      cmd: "/etc/scripts/collector.sh 1 {{ eco_name }} {{ hostvars['mongodb']['ansible_default_ipv4']['address'] }} &"
+      cmd: "/etc/scripts/collector.sh {{ collector_time_interval }} {{ eco_name }} 10.146.15.208 &"
       chdir: /etc/scripts
 
 - hosts: k3s-master, microk8s-master, openyurt-master
+  gather_facts: no
   vars: 
     process: collector.sh
   tasks:
@@ -85,6 +95,25 @@
     retries: 6
     delay: 20
     ignore_errors: true
+  
+- hosts: k3s-master, microk8s-master, openyurt-master
+  name: scale down
+  vars: 
+    process: collector.sh
+  tasks:
+  - name: scale applications down to 1 Replicas
+    become: yes
+    ignore_errors: true
+    shell: kubectl scale --replicas=1 deployment/sensor-device-deployment deployment/camera-edge-device
+  - name: Wait for default pods become ready
+    become: yes
+    shell: "kubectl wait --namespace=default --for=condition=Ready pods --timeout=20s --all"
+    register: control_plane_pods_ready
+    until: control_plane_pods_ready.rc == 0
+    retries: 6
+    delay: 20
+    ignore_errors: true
+
   # - name: scale application to 20 Replicas
   #   become: yes
   #   shell: kubectl scale --replicas=20 deployment/sensor-device-deployment deployment/camera-edge-device
@@ -96,104 +125,108 @@
   #   retries: 6
   #   delay: 20
   #   ignore_errors: true
-  - name: scale application
-    become: yes
-    shell: kubectl scale --replicas=1 deployment/sensor-device-deployment deployment/camera-edge-device
+  # - name: scale application
+  #   become: yes
+  #   shell: kubectl scale --replicas=1 deployment/sensor-device-deployment deployment/camera-edge-device
 
-- name: Increase Send Requests
-  hosts: k3s-master, microk8s-master, openyurt-master
-  tasks:
-  - name: Changes Variables in Kubernetes Manifest
-    vars: 
-      CAMERA_EDGE_DEVICE_HEIGHT: 100
-      CAMERA_EDGE_DEVICE_INTERVAL: 1000
-      CAMERA_EDGE_DEVICE_WIDTH: 100
-      IMAGE_PROCESSING_CLOUD_EPOCHS: 1
-      IMAGE_PROCESSING_CLOUD_RATE_IN_IMAGES: 10
-      IMAGE_PROCESSING_EDGE_ACCEPTANCE_RATE: 0.5
-      SENSOR_DEVICE_PING_INTERVAL: 100
-    template:   
-        src: "kubernetes/{{item}}.j2"    # Iterates over 2 templates   
-        dest: "/etc/{{item}}"
-        owner: "{{ ansible_user }}"   
-        group: "{{ ansible_user }}"   
-        mode:  0644 ## OR  mode: u=rw, g=w,o=r        
-    become: true     
-    loop: # Tell the template module to find each of these templates and process                                              
-      - camera-edge-device-deployment.yaml
-      - image-processing-cloud-deployment.yaml
-      - image-processing-edge-deployment.yaml
-      - sensor-device-depl.yml
+# - name: Increase Send Requests
+#   hosts: k3s-master, microk8s-master, openyurt-master
+#   tasks:
+#   - name: Changes Variables in Kubernetes Manifest
+#     vars: 
+#       CAMERA_EDGE_DEVICE_HEIGHT: 10000
+#       CAMERA_EDGE_DEVICE_INTERVAL: 100
+#       CAMERA_EDGE_DEVICE_WIDTH: 10000
+#       IMAGE_PROCESSING_CLOUD_EPOCHS: 1
+#       IMAGE_PROCESSING_CLOUD_RATE_IN_IMAGES: 10
+#       IMAGE_PROCESSING_EDGE_ACCEPTANCE_RATE: 0.5
+#       SENSOR_DEVICE_PING_INTERVAL: 100
+#     template:   
+#         src: "kubernetes/{{item}}.j2"    # Iterates over 2 templates   
+#         dest: "/etc/{{item}}"
+#         owner: "{{ ansible_user }}"   
+#         group: "{{ ansible_user }}"   
+#         mode:  0644 ## OR  mode: u=rw, g=w,o=r        
+#     become: true     
+#     loop: # Tell the template module to find each of these templates and process                                              
+#       - camera-edge-device-deployment.yaml
+#       #- image-processing-cloud-deployment.yaml
+#       #- image-processing-edge-deployment.yaml
+#       - sensor-device-depl.yml
 
-  - name: Apply new Kubernetes Manifest
-    become: yes
-    ignore_errors: true
-    shell: kubectl delete -f /etc/{{ item }} && kubectl apply -f /etc/{{ item }}
-    loop:                                              
-      - camera-edge-device-deployment.yaml
-      - image-processing-cloud-deployment.yaml
-      - image-processing-edge-deployment.yaml
-      - sensor-device-depl.yml
+#   - name: Apply new Kubernetes Manifest
+#     become: yes
+#     ignore_errors: true
+#     shell: kubectl delete -f /etc/{{ item }} && kubectl apply -f /etc/{{ item }}
+#     loop:                                              
+#       - camera-edge-device-deployment.yaml
+#       #- image-processing-cloud-deployment.yaml
+#       #- image-processing-edge-deployment.yaml
+#       - sensor-device-depl.yml
 
-  - name: sleep for x seconds
-    shell: sleep 100
-  - name: Changes Variables in Kubernetes Manifest
-    vars: 
-      CAMERA_EDGE_DEVICE_HEIGHT: 100
-      CAMERA_EDGE_DEVICE_INTERVAL: 1000
-      CAMERA_EDGE_DEVICE_WIDTH: 100
-      IMAGE_PROCESSING_CLOUD_EPOCHS: 1
-      IMAGE_PROCESSING_CLOUD_RATE_IN_IMAGES: 10
-      IMAGE_PROCESSING_EDGE_ACCEPTANCE_RATE: 0.5
-      SENSOR_DEVICE_PING_INTERVAL: 100
-    template:   
-        src: "kubernetes/{{item}}.j2"    # Iterates over 2 templates   
-        dest: "/etc/{{item}}"
-        owner: "{{ ansible_user }}"   
-        group: "{{ ansible_user }}"   
-        mode:  0644 ## OR  mode: u=rw, g=w,o=r        
-    become: true     
-    loop: # Tell the template module to find each of these templates and process                                              
-      - camera-edge-device-deployment.yaml
-      - image-processing-cloud-deployment.yaml
-      - image-processing-edge-deployment.yaml
-      - sensor-device-depl.yml
 
-  - name: Apply new Kubernetes Manifest
-    become: yes
-    ignore_errors: true
-    shell: kubectl delete -f /etc/{{ item }} && kubectl apply -f /etc/{{ item }}
-    loop:                                              
-      - camera-edge-device-deployment.yaml
-      - image-processing-cloud-deployment.yaml
-      - image-processing-edge-deployment.yaml
-      - sensor-device-depl.yml
+# - name: Decrease Send Requests
+#   hosts: k3s-master, microk8s-master, openyurt-master
+#   tasks:
+#   # - name: sleep for x seconds
+#   #   shell: sleep 100
+#   - name: Changes Back Variables in Kubernetes Manifest
+#     vars: 
+#       CAMERA_EDGE_DEVICE_HEIGHT: 100
+#       CAMERA_EDGE_DEVICE_INTERVAL: 1000
+#       CAMERA_EDGE_DEVICE_WIDTH: 100
+#       IMAGE_PROCESSING_CLOUD_EPOCHS: 1
+#       IMAGE_PROCESSING_CLOUD_RATE_IN_IMAGES: 10
+#       IMAGE_PROCESSING_EDGE_ACCEPTANCE_RATE: 0.5
+#       SENSOR_DEVICE_PING_INTERVAL: 100
+#     template:   
+#         src: "kubernetes/{{item}}.j2"    # Iterates over 2 templates   
+#         dest: "/etc/{{item}}"
+#         owner: "{{ ansible_user }}"   
+#         group: "{{ ansible_user }}"   
+#         mode:  0644 ## OR  mode: u=rw, g=w,o=r        
+#     become: true     
+#     loop: # Tell the template module to find each of these templates and process                                              
+#       - camera-edge-device-deployment.yaml
+#       #- image-processing-cloud-deployment.yaml
+#       #- image-processing-edge-deployment.yaml
+#       - sensor-device-depl.yml
 
-- hosts: all:!mongodb
-  vars: 
-    process: collector.sh
-  tasks:
-  - name: Get running processes
-    shell: "ps -ef | grep -v grep | grep -w {{ process }} | awk '{print $2}'"
-    register: running_processes
-  - name: Kill running processes
-    ignore_errors: True
-    become: yes
-    shell: "kill {{ item }}"
-    with_items: "{{ running_processes.stdout_lines }}"
-  - become: yes
-    wait_for:
-      path: "/proc/{{ item }}/status"
-      state: absent
-    with_items: "{{ running_processes.stdout_lines }}"
-    ignore_errors: yes
-    register: killed_processes
-  - name: Force kill stuck processes
-    become: yes
-    shell: "kill -9 {{ item }}"
-    with_items: "{{ killed_processes.results | select('failed') | map(attribute='item') | list }}"
-  - name: Write stats json to mongodb
-    register: mongdb_output
-    shell: "mongo {{ hostvars['mongodb']['ansible_default_ipv4']['address'] }}/metrics < /etc/scripts/stats.json"
-  - debug:
-      msg: "{{ mongdb_output }}"
+#   - name: Apply Old Kubernetes Manifest
+#     become: yes
+#     ignore_errors: true
+#     shell: kubectl delete -f /etc/{{ item }} && kubectl apply -f /etc/{{ item }}
+#     loop:                                              
+#       - camera-edge-device-deployment.yaml
+#       #- image-processing-cloud-deployment.yaml
+#       #- image-processing-edge-deployment.yaml
+#       - sensor-device-depl.yml
+
+# - hosts: all:!mongodb
+#   vars: 
+#     process: collector.sh
+#   tasks:
+#   - name: Get running processes
+#     shell: "ps -ef | grep -v grep | grep -w {{ process }} | awk '{print $2}'"
+#     register: running_processes
+#   - name: Kill running processes
+#     ignore_errors: True
+#     become: yes
+#     shell: "kill {{ item }}"
+#     with_items: "{{ running_processes.stdout_lines }}"
+#   - become: yes
+#     wait_for:
+#       path: "/proc/{{ item }}/status"
+#       state: absent
+#     with_items: "{{ running_processes.stdout_lines }}"
+#     ignore_errors: yes
+#     register: killed_processes
+#   - name: Force kill stuck processes
+#     become: yes
+#     shell: "kill -9 {{ item }}"
+#     with_items: "{{ killed_processes.results | select('failed') | map(attribute='item') | list }}"
+#   - name: Write stats json to mongodb
+#     register: mongdb_output
+#     shell: "mongo {{ hostvars['mongodb']['ansible_default_ipv4']['address'] }}/metrics < /etc/scripts/stats.json"
+#   - debug:
+#       msg: "{{ mongdb_output }}"
