--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -264,8 +264,8 @@ jobs:
       - run: ls install-scripts/k3s-ansible
 
       - name: run ansible playbook
-        working-directory: install-scripts/k3s-ansible/inventory/sample
-        run: if ! ansible k3s-master --become -m command  -a "kubectl get nodes" -i inventory.ini; then ansible-playbook cluster_install.yml -i inventory.ini; fi
+        working-directory: install-scripts/k3s-ansible
+        run: if ! ansible k3s-master --become -m command  -a "kubectl get nodes" -i inventory/sample/inventory.ini; then ansible-playbook site.yml -i inventory/sample/inventory.ini; fi
 
   deploy-applications-openyurt:
     name: "Deploy Applications openyurt"
