--- a/dummy/kubernetes/mongodb/mongodb-deployment.yaml
+++ b/dummy/kubernetes/mongodb/mongodb-deployment.yaml
@@ -32,7 +32,7 @@ spec:
               - key: node
                 operator: In
                 values:
-                - cloud1
+                - cloud
       containers:
         - image: mongo
           name: mongodb
